--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,20 +8,22 @@ repos:
     -   id: debug-statements
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
-- repo: https://github.com/PyCQA/isort
-  rev: 5.11.4
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.9.1
   hooks:
-    - id: isort
-      name: isort
-- repo: https://github.com/asottile/pyupgrade
-  rev: v3.3.1
-  hooks:
-    - id: pyupgrade
-      args: [--py37-plus]
-- repo: https://github.com/psf/black
-  rev: 22.12.0
-  hooks:
-    - id: black
+  - id: ruff
+    types_or:
+    - python
+    - pyi
+    - jupyter
+    args:
+    - --fix
+    - --exit-non-zero-on-fix
+  - id: ruff-format
+    types_or:
+    - python
+    - pyi
+    - jupyter
 - repo: https://github.com/MarcoGorelli/madforhooks
   rev: 0.4.1
   hooks:
