Remove click dependency and complete test coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,7 @@ classifiers = [
     "Operating System :: OS Independent"
 ]
 
-dependencies = [
-    "Click>=8.0.0",
-]
+dependencies = []
 
 [project.optional-dependencies]
 
