--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,3 +55,8 @@ write_to = "head_of_apache/_version.py"
 [tool.pytest.ini_options]
 addopts = "-vv --cov=head_of_apache --cov-report term-missing"
 testpaths = ["tests"]
+
+[tool.coverage.run]
+omit = [
+    "_version.py",
+]
